@@ -9,7 +9,7 @@ use TestLib;
 use lib '/usr/share/postgresql-common';
 use PgCommon;
 
-use Test::More tests => 50 * ($#MAJORS+1);
+use Test::More tests => 58 * ($#MAJORS+1);
 
 sub check_major {
     my $v = $_[0];
@@ -126,7 +126,15 @@ template1|postgres|UNICODE
 Bob|1
 ', 'SQL command output: select';
 
-    # Check PL/Python
+    # Check PL/Perl (trusted)
+    is_program_out 'postgres', 'createlang plperl nobodydb', 0, '', 'createlang plperl succeeds for user postgres';
+    is_program_out 'postgres', 'createlang plperlu nobodydb', 0, '', 'createlang plperlu succeeds for user postgres';
+    is_program_out 'nobody', 'psql nobodydb -qc "CREATE FUNCTION remove_vowels(text) RETURNS text AS \'\\$_[0] =~ s/[aeiou]/_/ig; return \\$_[0];\' LANGUAGE plperl;"',
+	0, '', 'creating PL/Perl function as user nobody succeeds';
+    is_program_out 'nobody', 'psql nobodydb -Atc "select remove_vowels(\'foobArish\')"',
+	0, "f__b_r_sh\n", 'calling PL/Perl function';
+
+    # Check PL/Python (untrusted)
     is_program_out 'postgres', 'createlang plpythonu nobodydb', 0, '', 'createlang plpythonu succeeds for user postgres';
     is_program_out 'postgres', 'psql nobodydb -qc "CREATE FUNCTION capitalize(text) RETURNS text AS \'return args[0].capitalize()\' LANGUAGE plpythonu;"',
 	0, '', 'creating PL/Python function as user postgres succeeds';
